# attentionrank

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
attentionrank/: CandidatesGenerator.py  api.py  attentionrank.py  attentions.py  config.py  eval.py  neweval.py  neweval2.py  preprocessing.py  test.py  utils.py
src/attentionrank/: CandidatesGenerator.py  ModelEmbedding.py  __init__.py  attentionrank.py  attentions.py  eval.py  preprocessing.py  utils.py
