[project]
name = "attentionrank"
version = "0.1.0"
description = "Library for AttentionRank"
authors = [{ name = "Pablo Calleja" }]

dependencies = [
    "spacy==3.7.4",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "tqdm==4.65.2",
     "transformers==4.37.2",
     "typing==3.7.4.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src/attentionrank"]
exclude = ["data", "tests", "examples"]